samples/wig/should_pass/var_span.wig
variableStep chrom=chr1 span=2
1 10
3 5
5 10
10 10
