samples/wig/should_fail/missing_start.wig
fixedStep chrom=chr1
1
2
3
